fix datos del viaje row gap  & sorter in transferorder id

--- a/src/components/organisms/logistics/transfer-orders/details/main-description/mainDescription.module.scss
+++ b/src/components/organisms/logistics/transfer-orders/details/main-description/mainDescription.module.scss
@@ -1,6 +1,6 @@
 .mainDescription {
   display: flex;
-  column-gap: 32px;
+  column-gap: 1rem;
 
   .mapContainer {
     width: 50%;
